# project-asterope

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
game/: CMakeLists.txt
game/assets/: License.txt
game/assets/meshes/: Ship1.glb  Ship1.model
game/resource/shaders/: pbr.frag.glsl  pbr.vert.glsl  resource.conf
game/source/: ImContext.cpp  ImContext.hpp  Types.hpp  main.cpp
game/source/imgui/: AbstractImContext.cpp  AbstractImContext.hpp  AppImContext.cpp  AppImContext.hpp  ScreenImContext.cpp  ScreenImContext.hpp
game/source/scene/: Components.hpp  Scene.cpp  Scene.hpp
game/source/scene/gameplay/: PlayerShip.cpp  PlayerShip.h
game/source/scene/shaders/: PhysicalShader.cpp  PhysicalShader.hpp
